calculate land cover and rasterize category raster

--- a/notebook/lc.ipynb
+++ b/notebook/lc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "[171543 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,14 +173,14 @@
    "source": [
     "# load landcover data\n",
     "lc = gpd.read_file(\n",
-    "    \"data/CBS_Land_use_Netherlands_2017/CBS_Land_use_Netherlands_2017.gpkg\"\n",
+    "    \"../data/CBS_Land_use_Netherlands_2017/CBS_Land_use_Netherlands_2017.gpkg\"\n",
     ")\n",
     "lc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "'Spoorterrein;Hoofdweg;Vliegveld;Woongebied;Detailhandel en horeca;Openbare voorziening;Sociaal-culturele voorziening;Bedrijfsterrein;Stortplaats;Wrakkenopslagplaats;Begraafplaats;Delfstofwinplaats;Bouwterrein;Semi-verhard overig terrein;Park en plantsoen;Sportterrein;Volkstuin;Dagrecreatief terrein;Verblijfsrecreatief terrein;Glastuinbouw;Overig agrarisch terrein;Bos;Open droog natuurlijk terrein;Open nat natuurlijk terrein;IJsselmeer & Markermeer;Afgesloten zeearm;Rijn & Maas;Randmeer;Spaarbekken;Water met recreatieve functie;Water met delfstofwinningsfunctie;Vloei- en/of slibveld;Overig binnenwater;Waddenzee, Eems & Dollard;Oosterschelde;Westerschelde;Noordzee;Buitenland'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        " 'Abroad']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        " 'Buitenland': 'Abroad'}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "[171543 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,15 +493,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_34148\\2258989107.py:2: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  lc.to_file(\"output/lc_nl_en.shp\")\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24596\\3686611137.py:2: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  lc.to_file(\"../output/lc_nl_en.shp\")\n",
       "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'bodemgebruik' to 'bodemgebru'\n",
       "  ogr_write(\n"
      ]
@@ -509,12 +509,12 @@
    ],
    "source": [
     "# save the new lc\n",
-    "lc.to_file(\"output/lc_nl_en.shp\")"
+    "lc.to_file(\"../output/lc_nl_en.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -603,28 +603,20 @@
        "      <td>Westerschelde</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171536</th>\n",
+       "      <th>171538</th>\n",
        "      <td>82</td>\n",
        "      <td>Water</td>\n",
        "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((56045.988 378949.159, 55883.21...</td>\n",
+       "      <td>MULTIPOLYGON (((57306.449 386560.951, 57313.32...</td>\n",
        "      <td>Westerschelde</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171535</th>\n",
+       "      <th>171539</th>\n",
        "      <td>82</td>\n",
        "      <td>Water</td>\n",
        "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((55881.326 377894.135, 55881.29...</td>\n",
+       "      <td>MULTIPOLYGON (((38510.517 388318.021, 38512.37...</td>\n",
        "      <td>Westerschelde</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171541</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Noordzee</td>\n",
-       "      <td>MULTIPOLYGON (((240000 625000, 240000 620096.1...</td>\n",
-       "      <td>North Sea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171540</th>\n",
@@ -632,6 +624,14 @@
        "      <td>Water</td>\n",
        "      <td>Noordzee</td>\n",
        "      <td>MULTIPOLYGON (((25339.899 399998.153, 25334.94...</td>\n",
+       "      <td>North Sea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171541</th>\n",
+       "      <td>83</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Noordzee</td>\n",
+       "      <td>MULTIPOLYGON (((240000 625000, 240000 620096.1...</td>\n",
        "      <td>North Sea</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -648,10 +648,10 @@
        "4           10  Spoorterrein   Spoorterrein   \n",
        "...        ...           ...            ...   \n",
        "171537      82         Water  Westerschelde   \n",
-       "171536      82         Water  Westerschelde   \n",
-       "171535      82         Water  Westerschelde   \n",
-       "171541      83         Water       Noordzee   \n",
+       "171538      82         Water  Westerschelde   \n",
+       "171539      82         Water  Westerschelde   \n",
        "171540      83         Water       Noordzee   \n",
+       "171541      83         Water       Noordzee   \n",
        "\n",
        "                                                 geometry       label_en  \n",
        "0       MULTIPOLYGON (((43278.376 374529.115, 43278.37...   Railway site  \n",
@@ -661,15 +661,15 @@
        "4       MULTIPOLYGON (((105349.804 429333.505, 105373....   Railway site  \n",
        "...                                                   ...            ...  \n",
        "171537  MULTIPOLYGON (((29145.262 379663.83, 29142.133...  Westerschelde  \n",
-       "171536  MULTIPOLYGON (((56045.988 378949.159, 55883.21...  Westerschelde  \n",
-       "171535  MULTIPOLYGON (((55881.326 377894.135, 55881.29...  Westerschelde  \n",
-       "171541  MULTIPOLYGON (((240000 625000, 240000 620096.1...      North Sea  \n",
+       "171538  MULTIPOLYGON (((57306.449 386560.951, 57313.32...  Westerschelde  \n",
+       "171539  MULTIPOLYGON (((38510.517 388318.021, 38512.37...  Westerschelde  \n",
        "171540  MULTIPOLYGON (((25339.899 399998.153, 25334.94...      North Sea  \n",
+       "171541  MULTIPOLYGON (((240000 625000, 240000 620096.1...      North Sea  \n",
        "\n",
        "[171542 rows x 5 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "       81, 82, 83], dtype=int32)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -795,11 +795,11 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171539</th>\n",
+       "      <th>171535</th>\n",
        "      <td>82</td>\n",
        "      <td>Water</td>\n",
        "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((38510.517 388318.021, 38512.37...</td>\n",
+       "      <td>MULTIPOLYGON (((55881.326 377894.135, 55881.29...</td>\n",
        "      <td>Westerschelde</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -813,22 +813,13 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171535</th>\n",
+       "      <th>171539</th>\n",
        "      <td>82</td>\n",
        "      <td>Water</td>\n",
        "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((55881.326 377894.135, 55881.29...</td>\n",
+       "      <td>MULTIPOLYGON (((38510.517 388318.021, 38512.37...</td>\n",
        "      <td>Westerschelde</td>\n",
        "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171540</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Noordzee</td>\n",
-       "      <td>MULTIPOLYGON (((25339.899 399998.153, 25334.94...</td>\n",
-       "      <td>North Sea</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>171541</th>\n",
@@ -836,6 +827,15 @@
        "      <td>Water</td>\n",
        "      <td>Noordzee</td>\n",
        "      <td>MULTIPOLYGON (((240000 625000, 240000 620096.1...</td>\n",
+       "      <td>North Sea</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171540</th>\n",
+       "      <td>83</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>Noordzee</td>\n",
+       "      <td>MULTIPOLYGON (((25339.899 399998.153, 25334.94...</td>\n",
        "      <td>North Sea</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
@@ -852,11 +852,11 @@
        "3           10  Spoorterrein   Spoorterrein   \n",
        "4           10  Spoorterrein   Spoorterrein   \n",
        "...        ...           ...            ...   \n",
-       "171539      82         Water  Westerschelde   \n",
-       "171534      82         Water  Westerschelde   \n",
        "171535      82         Water  Westerschelde   \n",
-       "171540      83         Water       Noordzee   \n",
+       "171534      82         Water  Westerschelde   \n",
+       "171539      82         Water  Westerschelde   \n",
        "171541      83         Water       Noordzee   \n",
+       "171540      83         Water       Noordzee   \n",
        "\n",
        "                                                 geometry       label_en  \\\n",
        "0       MULTIPOLYGON (((43278.376 374529.115, 43278.37...   Railway site   \n",
@@ -865,11 +865,11 @@
        "3       MULTIPOLYGON (((99772.811 423051.852, 99772.09...   Railway site   \n",
        "4       MULTIPOLYGON (((105349.804 429333.505, 105373....   Railway site   \n",
        "...                                                   ...            ...   \n",
-       "171539  MULTIPOLYGON (((38510.517 388318.021, 38512.37...  Westerschelde   \n",
-       "171534  MULTIPOLYGON (((64369.423 375798.12, 64356.637...  Westerschelde   \n",
        "171535  MULTIPOLYGON (((55881.326 377894.135, 55881.29...  Westerschelde   \n",
-       "171540  MULTIPOLYGON (((25339.899 399998.153, 25334.94...      North Sea   \n",
+       "171534  MULTIPOLYGON (((64369.423 375798.12, 64356.637...  Westerschelde   \n",
+       "171539  MULTIPOLYGON (((38510.517 388318.021, 38512.37...  Westerschelde   \n",
        "171541  MULTIPOLYGON (((240000 625000, 240000 620096.1...      North Sea   \n",
+       "171540  MULTIPOLYGON (((25339.899 399998.153, 25334.94...      North Sea   \n",
        "\n",
        "        score  \n",
        "0           1  \n",
@@ -878,16 +878,16 @@
        "3           1  \n",
        "4           1  \n",
        "...       ...  \n",
-       "171539      8  \n",
-       "171534      8  \n",
        "171535      8  \n",
-       "171540      7  \n",
+       "171534      8  \n",
+       "171539      8  \n",
        "171541      7  \n",
+       "171540      7  \n",
        "\n",
        "[171542 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,15 +911,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_34148\\1864366352.py:3: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  lc.to_file(\"output/lc_nl_en_scored.shp\")\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24596\\1535186287.py:3: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  lc.to_file(\"../output/lc_nl_en_scored.shp\")\n",
       "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'bodemgebruik' to 'bodemgebru'\n",
       "  ogr_write(\n"
      ]
@@ -928,12 +928,12 @@
    "source": [
     "# Save the lc scored\n",
     "# save the new lc\n",
-    "lc.to_file(\"output/lc_nl_en_scored.shp\")"
+    "lc.to_file(\"../output/lc_nl_en_scored.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
    "source": [
     "# Save the raster\n",
     "with rio.open(\n",
-    "    \"output/lc_nl_raster.tif\",\n",
+    "    \"../output/lc_nl_raster.tif\",\n",
     "    \"w\",\n",
     "    \"COG\",\n",
     "    count=1,\n",
@@ -1015,10 +1015,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Land cover category raster\n",
+    "raster_lc = rasterize(\n",
+    "    [data for data in zip(lc.geometry, lc[\"bg2017\"])],\n",
+    "    out_shape=shape,\n",
+    "    transform=affine_transform,\n",
+    "    nodata=-9999,\n",
+    "    fill=-9999,\n",
+    "    dtype=\"int16\",\n",
+    ")\n",
+    "raster_lc\n",
+    "\n",
+    "# Save the raster\n",
+    "with rio.open(\n",
+    "    \"../output/lc_category_nl_raster.tif\",\n",
+    "    \"w\",\n",
+    "    \"COG\",\n",
+    "    count=1,\n",
+    "    width=raster_lc.shape[1],\n",
+    "    height=raster_lc.shape[0],\n",
+    "    nodata=-9999,\n",
+    "    compress=\"lzw\",\n",
+    "    transform=affine_transform,\n",
+    "    crs=lc_crs,\n",
+    "    dtype=\"int16\",\n",
+    ") as source:\n",
+    "    source.write(raster_lc, 1)"
+   ]
   }
  ],
  "metadata": {
