send land cover label

--- a/notebook/lc.ipynb
+++ b/notebook/lc.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import rasterio as rio\n",
     "from rasterio import transform\n",
-    "from rasterio.features import rasterize"
+    "from rasterio.features import rasterize\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "[171543 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "'Spoorterrein;Hoofdweg;Vliegveld;Woongebied;Detailhandel en horeca;Openbare voorziening;Sociaal-culturele voorziening;Bedrijfsterrein;Stortplaats;Wrakkenopslagplaats;Begraafplaats;Delfstofwinplaats;Bouwterrein;Semi-verhard overig terrein;Park en plantsoen;Sportterrein;Volkstuin;Dagrecreatief terrein;Verblijfsrecreatief terrein;Glastuinbouw;Overig agrarisch terrein;Bos;Open droog natuurlijk terrein;Open nat natuurlijk terrein;IJsselmeer & Markermeer;Afgesloten zeearm;Rijn & Maas;Randmeer;Spaarbekken;Water met recreatieve functie;Water met delfstofwinningsfunctie;Vloei- en/of slibveld;Overig binnenwater;Waddenzee, Eems & Dollard;Oosterschelde;Westerschelde;Noordzee;Buitenland'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +250,7 @@
        " 'Abroad']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
        " 'Buitenland': 'Abroad'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +480,7 @@
        "[171543 rows x 5 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,14 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24596\\3686611137.py:2: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "C:\\Users\\ramiq\\AppData\\Local\\Temp\\ipykernel_24336\\3686611137.py:2: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
       "  lc.to_file(\"../output/lc_nl_en.shp\")\n",
       "c:\\Users\\ramiq\\Application\\hack4good\\.venv\\lib\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'bodemgebruik' to 'bodemgebru'\n",
       "  ogr_write(\n"
@@ -514,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +670,7 @@
        "[171542 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +694,7 @@
        "       81, 82, 83], dtype=int32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,189 +708,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bg2017</th>\n",
-       "      <th>bodemgebruik</th>\n",
-       "      <th>categorie</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>label_en</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>MULTIPOLYGON (((43278.376 374529.115, 43278.37...</td>\n",
-       "      <td>Railway site</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>MULTIPOLYGON (((120111.119 403198.578, 120116....</td>\n",
-       "      <td>Railway site</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>MULTIPOLYGON (((165518.079 403933.207, 165525....</td>\n",
-       "      <td>Railway site</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>MULTIPOLYGON (((99772.811 423051.852, 99772.09...</td>\n",
-       "      <td>Railway site</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>Spoorterrein</td>\n",
-       "      <td>MULTIPOLYGON (((105349.804 429333.505, 105373....</td>\n",
-       "      <td>Railway site</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171535</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((55881.326 377894.135, 55881.29...</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171534</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((64369.423 375798.12, 64356.637...</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171539</th>\n",
-       "      <td>82</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>MULTIPOLYGON (((38510.517 388318.021, 38512.37...</td>\n",
-       "      <td>Westerschelde</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171541</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Noordzee</td>\n",
-       "      <td>MULTIPOLYGON (((240000 625000, 240000 620096.1...</td>\n",
-       "      <td>North Sea</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171540</th>\n",
-       "      <td>83</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>Noordzee</td>\n",
-       "      <td>MULTIPOLYGON (((25339.899 399998.153, 25334.94...</td>\n",
-       "      <td>North Sea</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>171542 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        bg2017  bodemgebruik      categorie  \\\n",
-       "0           10  Spoorterrein   Spoorterrein   \n",
-       "1           10  Spoorterrein   Spoorterrein   \n",
-       "2           10  Spoorterrein   Spoorterrein   \n",
-       "3           10  Spoorterrein   Spoorterrein   \n",
-       "4           10  Spoorterrein   Spoorterrein   \n",
-       "...        ...           ...            ...   \n",
-       "171535      82         Water  Westerschelde   \n",
-       "171534      82         Water  Westerschelde   \n",
-       "171539      82         Water  Westerschelde   \n",
-       "171541      83         Water       Noordzee   \n",
-       "171540      83         Water       Noordzee   \n",
-       "\n",
-       "                                                 geometry       label_en  \\\n",
-       "0       MULTIPOLYGON (((43278.376 374529.115, 43278.37...   Railway site   \n",
-       "1       MULTIPOLYGON (((120111.119 403198.578, 120116....   Railway site   \n",
-       "2       MULTIPOLYGON (((165518.079 403933.207, 165525....   Railway site   \n",
-       "3       MULTIPOLYGON (((99772.811 423051.852, 99772.09...   Railway site   \n",
-       "4       MULTIPOLYGON (((105349.804 429333.505, 105373....   Railway site   \n",
-       "...                                                   ...            ...   \n",
-       "171535  MULTIPOLYGON (((55881.326 377894.135, 55881.29...  Westerschelde   \n",
-       "171534  MULTIPOLYGON (((64369.423 375798.12, 64356.637...  Westerschelde   \n",
-       "171539  MULTIPOLYGON (((38510.517 388318.021, 38512.37...  Westerschelde   \n",
-       "171541  MULTIPOLYGON (((240000 625000, 240000 620096.1...      North Sea   \n",
-       "171540  MULTIPOLYGON (((25339.899 399998.153, 25334.94...      North Sea   \n",
-       "\n",
-       "        score  \n",
-       "0           1  \n",
-       "1           1  \n",
-       "2           1  \n",
-       "3           1  \n",
-       "4           1  \n",
-       "...       ...  \n",
-       "171535      8  \n",
-       "171534      8  \n",
-       "171539      8  \n",
-       "171541      7  \n",
-       "171540      7  \n",
-       "\n",
-       "[171542 rows x 6 columns]"
+       "'{\"10\": \"Railway site\", \"11\": \"Main road\", \"12\": \"Airport\", \"20\": \"Residential area\", \"21\": \"Retail and catering\", \"22\": \"Public facility\", \"23\": \"Socio-cultural facility\", \"24\": \"Industrial estate\", \"30\": \"Landfill\", \"31\": \"Wreck storage site\", \"32\": \"Cemetery\", \"33\": \"Mineral extraction site\", \"34\": \"Construction site\", \"35\": \"Semi-paved other terrain\", \"40\": \"Park and public garden\", \"41\": \"Sports field\", \"42\": \"Allotment garden\", \"43\": \"Day recreation area\", \"44\": \"Recreational accommodation area\", \"50\": \"Greenhouse horticulture\", \"51\": \"Other agricultural terrain\", \"60\": \"Forest\", \"61\": \"Open dry natural terrain\", \"62\": \"Open wet natural terrain\", \"70\": \"IJsselmeer & Markermeer\", \"71\": \"Closed sea arm\", \"72\": \"Rhine & Meuse\", \"73\": \"Randmeer\", \"74\": \"Reservoir\", \"75\": \"Water with recreational function\", \"76\": \"Water with mineral extraction function\", \"77\": \"Fluid and/or silt field\", \"78\": \"Other inland water\", \"80\": \"Wadden Sea, Eems & Dollard\", \"81\": \"Oosterschelde\", \"82\": \"Westerschelde\", \"83\": \"North Sea\"}'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remap score to lc label\n",
+    "remap_label = {}\n",
+    "for x in range(len(class_id)):\n",
+    "    remap_label[int(class_id[x])] = labels_en[x]\n",
+    "remap_label_json = json.dumps(remap_label)\n",
+    "remap_label_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'class_id' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Remap values\u001b[39;00m\n\u001b[0;32m      8\u001b[0m remap_score \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mclass_id\u001b[49m)):\n\u001b[0;32m     10\u001b[0m     remap_score[class_id[x]] \u001b[38;5;241m=\u001b[39m values[x]\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(remap_score)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'class_id' is not defined"
+     ]
     }
    ],
    "source": [
